--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -138,7 +138,7 @@ cy:
     thanks for your donation: "Diolch am eich cyfraniad!"
     thanks authorization: "Os gofynnwyd am dderbynneb. Bydd yn eich mewnflwch yn fuan."
     donation error: "Mae’n flin gennym, Digwyddodd gwall wrth brosesu'ch rhodd. Y gwall oedd: %{error_text}"
-    created ago: "Created %{time_ago} ago"
+    created ago: "Crëwyd %{time_ago} yn ôl"
     copy: "Copi"
     copy confirmed: "Copïwyd!"
     new note: "Nodyn newydd"
@@ -713,7 +713,7 @@ cy:
         title: "Cynlluniau Darllen"
         browse by category: "Chwiliwch yn ôl Categori"
         browse plans: "Pori %{category}Cynlluniau"
-        swap list localization: "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+        swap list localization: "(<a href='%{swap_link}'>Gweld yn %{swap_locale}</a>)"
         showing language filtered: "Dim ond yn dangos rhaglenni ar gael yn %{lang_name}"
         all: "Pob dim"
         all plans: "Pob Cynllun"
@@ -758,7 +758,7 @@ cy:
         end date _ before date string: "Dyddiad Gorffen:"
         are you behind: "Ar ei hôl hi ?"
         do you want to reset: "Angen ail gychwyn ?"
-        catch up text: "Shift today's reading to your last completed reading (day %{last_completed_day} of the plan)."
+        catch up text: "Symudwch ddarlleniad heddiw i eich darlleniad diwethaf sydd wedi cael ei cwbwlhau (diwrnod %{last_completed_day} y cynllun)."
         catch up description only: "Os na fedrwch ddarllen y cynllun yn ddyddiol, peidiwch â phoeni! Medrwch symud y darlleniad cyfredol yn ôl at eich darlleniad diwethaf."
         catch me up: "Ail Afael"
         restart description: "Medrwch ail afael ar eich cynllun. Caiff eich patrwm darllen a’ch cynnydd ei  aildrefnu er mwyn i chi ail gychwyn ."
