--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -211,7 +211,7 @@ da:
     cancel: "Fortryd"
     try the beta: "Prøv beta´en"
     welcome to the beta: "Velkommen til det nye YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Marker vers"
     comment: "Ny kommentar"
     note: "Ny note"
     selected: "Valgt"
@@ -394,7 +394,7 @@ da:
         all notes: "Alle noter"
         community notes: "Gruppe noter"
         new note: "Ny note"
-        status field: "Note Status:"
+        status field: "Note status:"
         edit: "Rediger"
         delete: "Slet denne note"
         confirm delete: "Ja, jeg er sikker"
