--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -211,7 +211,7 @@ de:
     cancel: "Abbrechen"
     try the beta: "Teste die Beta-Version!"
     welcome to the beta: "Willkommen bei der neuen YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Vers markieren"
     comment: "Neuer Kommentar"
     note: "Neue Notiz"
     selected: "Ausgewählt"
@@ -394,7 +394,7 @@ de:
         all notes: "Alle Notizen"
         community notes: "Gemeinschaftsnotizen"
         new note: "Neue Notiz"
-        status field: "Note Status:"
+        status field: "Status der Notiz:"
         edit: "Bearbeiten"
         delete: "Diese Notiz löschen"
         confirm delete: "Ja, ich bin sicher."
