--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -211,7 +211,7 @@ en-GB:
     cancel: "Cancel"
     try the beta: "Try the Beta"
     welcome to the beta: "Welcome to the new YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Highlight verse"
     comment: "New comment"
     note: "New note"
     selected: "Selected"
@@ -394,7 +394,7 @@ en-GB:
         all notes: "All notes"
         community notes: "Community notes"
         new note: "New note"
-        status field: "Note Status:"
+        status field: "Note status:"
         edit: "Edit"
         delete: "Delete this note"
         confirm delete: "Yes, I'm sure"
