--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -211,7 +211,7 @@ fi:
     cancel: "Peruuta"
     try the beta: "Kokeile Beta-versiota"
     welcome to the beta: "Tervetuloa uudistettuun YouVersion.comiin!"
-    highlight: "Highlight Verse"
+    highlight: "Korosta jae"
     comment: "Uusi kommentti"
     note: "Uusi muistiinpano"
     selected: "Valittu"
@@ -394,7 +394,7 @@ fi:
         all notes: "Kaikki muistiinpanot"
         community notes: "Yhteisön muistiinpanot"
         new note: "Uusi muistiinpano"
-        status field: "Note Status:"
+        status field: "Muistiinpanon tila:"
         edit: "Muokkaa"
         delete: "Poista tämä muistiinpano"
         confirm delete: "Kyllä, olen varma"
