--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -211,7 +211,7 @@ nl:
     cancel: "Annuleren"
     try the beta: "Probeer de bètaversie"
     welcome to the beta: "Welkom op het vernieuwde YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Markeer vers"
     comment: "Nieuwe reactie"
     note: "Nieuwe notitie"
     selected: "Geselecteerd"
@@ -251,12 +251,12 @@ nl:
         users like this: "%{last_liker_link} en %{more_link} vinden dit leuk"
         vod: 
             title: "Vers van de dag"
-            get daily email: "Get daily email"
+            get daily email: "Ontvang dagelijkse e-mail"
             subscribe: "Aanmelden"
             update: "Bijwerken"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Uitschrijven"
             version: "Versies"
-            view more: "View More"
+            view more: "Meer bekijken"
             time: "Tijd"
         friendship: 
             now friends: "Je bent nu vrienden met"
@@ -283,7 +283,7 @@ nl:
             edit highlight title: "Bewerk deze markering"
             edit bookmark title: "Bewerk deze bladwijzer"
             edit note title: "Bewerk deze notitie"
-            edit subscription: "Edit subscription"
+            edit subscription: "Aanmelding bijwerken"
             delete: "Verwijderen"
             delete confirm: "Weet je het zeker?"
             delete highlight title: "Verwijder deze markering"
@@ -394,7 +394,7 @@ nl:
         all notes: "Alle notities"
         community notes: "Notities uit de gemeenschap"
         new note: "Nieuwe notitie"
-        status field: "Note Status:"
+        status field: "Notitie opmerkingen:"
         edit: "Bewerken"
         delete: "Deze notitie verwijderen"
         confirm delete: "Ja, ik weet het zeker"
@@ -468,14 +468,14 @@ nl:
         edit notifications: "Meldingen beheren"
         edit connections: "Verbonden accounts"
         edit devices: "Verbonden apparaten"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Vers van de dag abonnering"
+        vod_subscription success: "Je hebt de instellingen voor Vers van de Dag met succes aangepast!"
+        vod_subscription failure: "Excuses, er was een probleem bij het aanpassen van je Vers van de Dag instellingen."
+        daily email delivery: "Dagelijkse e-mailbezorging"
         time: "Tijd"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Dagelijkse push melding voor mobiele apps"
         subscribe: "Aanmelden"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Uitschrijven"
         edit account_existence: "Account verwijderen"
         delete account button: "Mijn YouVersion-account verwijderen"
         no devices: "Er zijn geen apparaten gekoppeld aan je YouVersion-account."
