--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -211,7 +211,7 @@ ro:
     cancel: "Anulează"
     try the beta: "Încearcă versiunea Beta"
     welcome to the beta: "Bine ai venit pe noul YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Evidențiază versetul"
     comment: "Comentariu nou"
     note: "Notiță nouă"
     selected: "Selectate"
@@ -394,7 +394,7 @@ ro:
         all notes: "Toate notițele"
         community notes: "Notițele comunității"
         new note: "Notiță nouă"
-        status field: "Note Status:"
+        status field: "Status notiță:"
         edit: "Modifică"
         delete: "Șterge notița"
         confirm delete: "Sunt sigur"
