--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -211,7 +211,7 @@ sq:
     cancel: "Anulo"
     try the beta: "Provoni versionin Beta"
     welcome to the beta: "Mirë se vini te YouVersion.com i ri!"
-    highlight: "Highlight Verse"
+    highlight: "Thekso vargu"
     comment: "Koment i ri"
     note: "Shënim i ri"
     selected: "I përzgjedhur"
@@ -394,7 +394,7 @@ sq:
         all notes: "Të gjitha shënimet"
         community notes: "Shënimet e komunitetit"
         new note: "Shënim i ri"
-        status field: "Note Status:"
+        status field: "Statusi i shënimit:"
         edit: "Redakto"
         delete: "Fshije këtë shënim"
         confirm delete: "Po, jam i/e sigurt"
