--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -211,7 +211,7 @@ th:
     cancel: "ยกเลิก"
     try the beta: "เข้าร่วมการทดสอบแอพเบต้า"
     welcome to the beta: "ขอต้อนรับเข้าสู่ YouVersion.com โฉมใหม่!"
-    highlight: "Highlight Verse"
+    highlight: "เน้นข้อพระคัมภีร์"
     comment: "ความเห็นใหม่"
     note: "โน้ตใหม่"
     selected: "เลือก"
@@ -394,7 +394,7 @@ th:
         all notes: "โน้ตทั้งหมด"
         community notes: "โน้ตของผู้อื่น"
         new note: "โน้ตใหม่"
-        status field: "Note Status:"
+        status field: "<br/>สถานะของสมุดบันทึก:"
         edit: "แก้ไข"
         delete: "ลบโน้ตนี้"
         confirm delete: "ใช่, ฉันมั่นใจ"
