--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -150,7 +150,7 @@ tl:
     deleted connection error: "Paumanhin, may pagkakamali sa pag-alis ng iyong koneksyon sa %{connection}."
     connection marketing: "Ang YouVersion ay mas masaya kasama ang mga kaibigan! Iugnay ang iyong YouVersion account sa iyong mga social networks para madaling makita ang mga kaibigan sa YouVersion. Madali mo ring maibabahagi ang mga nilalaman ng YouVersion sa ilang hakbang lang. Hindi kami magpa-paskil ng anumang walang pahintulot mula sa iyo."
     next step connections: "Susunod: I-link ang iyong account at hanapin ang iyong mga kaibigan"
-    no notes found: "%{username} doesn't have any notes."
+    no notes found: "Si %{username} ay walang tala."
     no recent activity: "Si %{username} ay walang kasalukuyang aktibidad"
     no badges found yourself: "Hindi ka pa nakapagkamit ng anumang badge."
     no badges found other: "Si %{username} ay hindi pa nakapagkamit ng anumang badge."
@@ -211,7 +211,7 @@ tl:
     cancel: "Itigil"
     try the beta: "Subukan ang Beta"
     welcome to the beta: "Tuloy po sa bagong Youversion.com!"
-    highlight: "Highlight Verse"
+    highlight: "I-haylayt ang Berso"
     comment: "Bagong Komentaryo"
     note: "Bagong Tala"
     selected: "Napili"
@@ -251,12 +251,12 @@ tl:
         users like this: "%{last_liker_link} at %{more_link} pa ang may gusto nito"
         vod: 
             title: "Salita ng Diyos para sa Araw na Ito"
-            get daily email: "Get daily email"
+            get daily email: "Tumanggap ng email araw-araw"
             subscribe: "Sumuskribi"
             update: "Pagbabago"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Mag-unsubscribe"
             version: "Salin"
-            view more: "View More"
+            view more: "Tingnan pa"
             time: "Oras"
         friendship: 
             now friends: "Kayo ay magkaibigan na ni"
@@ -283,7 +283,7 @@ tl:
             edit highlight title: "I-edit ang haylayt"
             edit bookmark title: "I-edit ang bookmark"
             edit note title: "I-edit ang tala"
-            edit subscription: "Edit subscription"
+            edit subscription: "Baguhin ang suskripsyon"
             delete: "Burahin"
             delete confirm: "Sigurado ka ba sa gusto mong gawin?"
             delete highlight title: "Burahin ang haylayt na ito"
@@ -394,7 +394,7 @@ tl:
         all notes: "Lahat ng Tala"
         community notes: "Mga Talang Pangkomunidad"
         new note: "Bagong Tala"
-        status field: "Note Status:"
+        status field: "Istado ng Tala:"
         edit: "I-edit"
         delete: "Burahin ang Talang Ito"
         confirm delete: "Oo, sigurado ako"
@@ -468,14 +468,14 @@ tl:
         edit notifications: "Pamahalaan ang mga Abiso"
         edit connections: "Mga Kaugnay na Accounts"
         edit devices: "Mga Nakaugnay na Devices"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Suskripsyon ng Bersikulo Ngayon"
+        vod_subscription success: "Matagumpay mong na-update ang iyong suskripsyon ng Bersikulo Ngayon!"
+        vod_subscription failure: "Paumanhin, nagkaroon ng problema sa pagbago mo ng subskripsyon ng Bersikulo Ngayon."
+        daily email delivery: "Araw-araw na pagpapadala ng email"
         time: "Oras"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Araw-araw na abiso para sa mobile app"
         subscribe: "Sumuskribi"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Mag-unsubscribe"
         edit account_existence: "Burahin ang Account"
         delete account button: "Burahin ang Aking YouVersion Account"
         no devices: "Walang mga gamit na nakakonekta sa iyong YouVersion Account"
