--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -211,7 +211,7 @@ vi:
     cancel: "Hủy"
     try the beta: "Thử phiên bản Beta"
     welcome to the beta: "Chào mừng bạn đến với YouVersion.com phiên bản mới!"
-    highlight: "Highlight Verse"
+    highlight: "Tô màu câu Kinh Thánh"
     comment: "Bình luận mới"
     note: "Ghi chú mới"
     selected: "Đã chọn"
@@ -251,12 +251,12 @@ vi:
         users like this: "%{last_liker_link} và %{more_link} thích"
         vod: 
             title: "Câu Kinh Thánh trong ngày"
-            get daily email: "Get daily email"
+            get daily email: "Nhận email hằng ngày"
             subscribe: "Đăng ký"
             update: "Cập nhật"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Ngừng đăng ký"
             version: "Bản dịch"
-            view more: "View More"
+            view more: "Xem thêm"
             time: "Thời gian"
         friendship: 
             now friends: "Bạn vừa kết bạn với"
@@ -283,7 +283,7 @@ vi:
             edit highlight title: "Sửa tô màu này"
             edit bookmark title: "Sửa đánh dấu này"
             edit note title: "Sửa ghi chú này"
-            edit subscription: "Edit subscription"
+            edit subscription: "Chỉnh sửa đăng ký"
             delete: "Xóa"
             delete confirm: "Bạn có chắc không?"
             delete highlight title: "Xóa tô màu này"
@@ -394,7 +394,7 @@ vi:
         all notes: "Tất cả ghi chú"
         community notes: "Ghi chú cộng đồng"
         new note: "Ghi chú mới"
-        status field: "Note Status:"
+        status field: "Tình trạng ghi chú:"
         edit: "Sửa"
         delete: "Xóa ghi chú này"
         confirm delete: "Vâng, tôi chắc!"
@@ -468,14 +468,14 @@ vi:
         edit notifications: "Quản lý thông báo"
         edit connections: "Tài khoản đã kết nối"
         edit devices: "Thiết bị đã kết nối"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Đăng ký \"Câu Kinh Thánh trong ngày\""
+        vod_subscription success: "Bạn đã cập nhật thành công việc đăng ký Câu Kinh Thánh trong ngày!"
+        vod_subscription failure: "Cáo lỗi! Việc cập nhật đăng ký Câu Kinh Thánh trong ngày có vấn đề."
+        daily email delivery: "Gởi email mỗi ngày"
         time: "Thời gian"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Gởi thông báo nhắc nhở mỗi ngày trên app"
         subscribe: "Đăng ký"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Ngừng đăng ký"
         edit account_existence: "Xóa tài khoản"
         delete account button: "Xóa tài khoản YouVersion của tôi"
         no devices: "Không có thiết bị nào kết nối với tài khoản YouVersion của bạn"
