--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -211,7 +211,7 @@ ko:
     cancel: "취소"
     try the beta: "베타 버젼을 사용해보세요."
     welcome to the beta: "YouVersion.com에 오신 것을 환영합니다"
-    highlight: "Highlight Verse"
+    highlight: "구절 하이라이트 하기"
     comment: "새로운 코멘트"
     note: "새 노트"
     selected: "선택"
@@ -394,7 +394,7 @@ ko:
         all notes: "전체 노트"
         community notes: "공동체 노트"
         new note: "새 노트"
-        status field: "Note Status:"
+        status field: "노트 상태:"
         edit: "편집"
         delete: "노트 삭제"
         confirm delete: "예, 확실합니다."
@@ -831,7 +831,7 @@ ko:
             duplicate: "거래 아이디: 이미 등록된 거래 아이디입니다."
         auth: 
             login notice: "구입하신 내용을 확인하기 위해서는, YouVerion 계정에 로그인 하시거나, <a href='/sign-up?source=licenses'>%{signup}</a>"
-            signup notice: "To validate your purchased content, sign up for a free YouVersion account below or <a href='/sign-in?source=licenses'>%{login}</a> if you already have an account."
+            signup notice: ", 구입 한 컨텐츠를 검증하는 아래 무료 유 버전 계정을 등록하거나 <a href='/sign-in?source=licenses'>%{login}</a> 이미 계정이있는 경우."
             signup link text: "무료 계정 만들기 신청을 하세요."
             login link text: "로그인"
     registration: 
