--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -211,7 +211,7 @@ uk:
     cancel: "Скасувати"
     try the beta: "Спробуйте Beta"
     welcome to the beta: "Запрошуємо до нового YouVersion.com!"
-    highlight: "Highlight Verse"
+    highlight: "Виділити вірш"
     comment: "Новий коментар"
     note: "Нова нотатка"
     selected: "Обрано"
@@ -394,7 +394,7 @@ uk:
         all notes: "Усі нотатки"
         community notes: "Нотатки спільноти"
         new note: "Нова нотатка"
-        status field: "Note Status:"
+        status field: "Статус нотатки:"
         edit: "Редагувати"
         delete: "Видалити Цю нотатку"
         confirm delete: "Так, впевнений(а)"
@@ -830,8 +830,8 @@ uk:
         vendor_transaction_id: 
             duplicate: "ID операції: цей id операції вже зареєстровано"
         auth: 
-            login notice: "To validate your purchased content, please login to your YouVersion account below or <a href='/sign-up?source=licenses'>%{signup}</a>."
-            signup notice: "To validate your purchased content, sign up for a free YouVersion account below or <a href='/sign-in?source=licenses'>%{login}</a> if you already have an account."
+            login notice: "Щоб підтвердити куплений Вами вміст, будь ласка увійдіть до Вашого облікового запису на YouVersion<a href='/sign-up?source=licenses'>%{signup}</a>."
+            signup notice: "Щоб підтвердити куплений Вами вміст, будь ласка, створіть обліковий запис на YouVersion нижче, або<a href='/sign-in?source=licenses'>%{login}</a>якщо у Вас вже є обліковий запис."
             signup link text: "зареєструватися безкоштовно"
             login link text: "увійти"
     registration: 
