--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -209,7 +209,7 @@ en:
   save:                                         "Save"
   cancel:                                       "Cancel"
   try the beta:                                 "Try the Beta"
-  welcome to the beta:                          "Welcome to the new YouVersion.com!"
+  welcome to the beta:                          "Welcome to Bible.com!"
   highlight:                                    "Highlight Verse"
   comment:                                      "New Comment"
   note:                                         "New Note"
@@ -482,7 +482,7 @@ en:
     no devices download copy:                   "Based on the online Bible, YouVersion, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='https://www.bible.com/app'>bible.com/app</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Yes, Delete My Account"
     account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "%{user}'s Recent Activity"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}'s Notes"
@@ -937,7 +937,7 @@ en:
     facebook:                                   "YouVersion on Facebook"
     twitter:                                    "YouVersion on Twitter"
     support:                                    "Need help with YouVersion?"
-    lead copy:                                  "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle."
+    lead copy:                                  "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle."
     resources title:                            "Press Resources"
     now title:                                  "Today in the YouVersion Community"
     resources:
@@ -999,7 +999,7 @@ en:
         subscribe heading:                      "Subscribe to Bible Plans."
         subscribe description:                  "Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan and each day you'll find a Bible selection waiting for you."
         download heading:                       "Take the Bible with you."
-        download description:                   "<a href='http://youversion.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+        download description:                   "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
       get started:                              "Get started with your free account."
       word with you:                            "God's Word is with you."
       download action:                          "Download the Bible App"
